--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   country_picker: ^2.0.19
   flutter_riverpod: ^2.1.3
   image_picker: ^0.8.6+1
+  flutter_contacts: ^1.1.5+1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
