--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   path_provider: ^2.0.12
   permission_handler: ^9.2.0
   audioplayers: ^3.0.1
+  swipe_to: ^1.0.2
 
 dev_dependencies:
   flutter_test:
