--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   permission_handler: ^9.2.0
   audioplayers: ^3.0.1
   swipe_to: ^1.0.2
+  story_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
