--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   audioplayers: ^3.0.1
   swipe_to: ^1.0.2
   story_view: ^0.14.0
+  flutter_hooks: ^0.18.5+1
+  hooks_riverpod: ^2.1.3
 
 dev_dependencies:
   flutter_test:
