--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   story_view: ^0.14.0
   flutter_hooks: ^0.18.5+1
   hooks_riverpod: ^2.1.3
+  firebase_messaging: ^14.2.1
+  http: ^0.13.5
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
